--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,12 @@ python:
   - "3.6"
 
 install:
+  - pip install codecov
   - python setup.py clean --all
   - python setup.py install
 
 script:
   - python setup.py test
+
+after_success:
+  codecov
