--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
+  - "3.7-dev"
 
 install:
   - pip install codecov
@@ -15,7 +16,6 @@ install:
 
 script:
   - coverage run setup.py test
-
 
 after_success:
   codecov
