--- a/.pylintrc
+++ b/.pylintrc
@@ -1,4 +1,4 @@
 [MASTER]
 ignore-patterns=test_
 ignored-classes=PaymentPending, PaymentProcessed, Capture, Void, Refund
-disable=missing-docstring, too-few-public-methods, attribute-defined-outside-init, invalid-name, wrong-import-position,no-self-use
+disable=missing-docstring, too-few-public-methods, attribute-defined-outside-init, invalid-name, wrong-import-position, no-self-use, exec-used
