--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,14 +1,10 @@
 name: build-release
 on:
-  push:
-    branches:
-      - master
-    paths:
-      - checkout_sdk/properties.py
+  workflow_dispatch:
 
 jobs:
   deploy:
-    if: github.ref == 'refs/heads/main' && ${{ false }}
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
