Disable Workflow Dispatch for release

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,6 +1,10 @@
 name: build-release
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - master
+    paths:
+      - checkout_sdk/properties.py
 
 jobs:
   deploy:
