--- a/.github/workflows/build-pull-request.yml
+++ b/.github/workflows/build-pull-request.yml
@@ -27,8 +27,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
-      - name: Lint with flake8
-        run: flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
+      - name: Run PyLint
+        run: pylint checkout_sdk
       - name: Run unit tests
         env:
           CHECKOUT_SECRET_KEY: ${{ secrets.IT_CHECKOUT_SECRET_KEY }}
