Adds request and get `payment contexts` endpoints

--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -37,6 +37,7 @@ jobs:
         run: flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
       - name: Run unit tests
         env:
+          CHECKOUT_PROCESSING_CHANNEL_ID: ${{ secrets.IT_CHECKOUT_PROCESSING_CHANNEL_ID }}
           CHECKOUT_PREVIOUS_SECRET_KEY: ${{ secrets.IT_CHECKOUT_PREVIOUS_SECRET_KEY }}
           CHECKOUT_PREVIOUS_PUBLIC_KEY: ${{ secrets.IT_CHECKOUT_PREVIOUS_PUBLIC_KEY }}
           CHECKOUT_DEFAULT_SECRET_KEY: ${{ secrets.IT_CHECKOUT_DEFAULT_SECRET_KEY }}
