--- a/.github/workflows/build-pull-request.yml
+++ b/.github/workflows/build-pull-request.yml
@@ -6,21 +6,15 @@ on:
 
 jobs:
   build:
-    #runs-on: ubuntu-latest
-    # python3.6 reached EOL and is no longer being supported on
-    # new versions of hosted runners on GitHub Actions
-    # ubuntu-20.04 is the last version that supported python3.6
-    # see https://github.com/actions/setup-python/issues/544#issuecomment-1332535877
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     strategy:
       max-parallel: 1
       fail-fast: false
       matrix:
         python-version:
           [
-            '3.6',
             '3.10',
-            'pypy-3.7',
+            'pypy-3.8'
           ]
     steps:
       - uses: actions/checkout@v2
