--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,10 @@
 repos:
+  - repo: https://github.com/PyCQA/flake8
+    rev: 7.3.0
+    hooks:
+      - id: flake8
+        args: ['--max-complexity=10', '--max-line-length=127']
+        files: ^(checkout_sdk|tests)/.*\.py$
   - repo: https://github.com/pycqa/pylint
     rev: v2.12.2
     hooks:
